--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "babel-loader": "8.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
