--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "@types/redux-form": "^8.3.1",
     "axios": "^0.21.1",
     "babel-loader": "8.1.0",
     "gh-pages": "^3.1.0",
@@ -22,6 +23,7 @@
     "react-scripts": "4.0.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.9",
+    "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
