--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/redux-form": "^8.3.1",
     "axios": "^0.21.1",
     "babel-loader": "8.1.0",
+    "classnames": "^2.3.1",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
