--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "redux-devtools-extension": "^2.13.9",
     "redux-form": "^8.3.7",
     "redux-thunk": "^2.3.0",
+    "reselect": "^4.0.0",
     "typescript": "^4.1.2",
     "web-vitals": "^1.0.1"
   },
