--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@storybook/react": "^6.2.9",
     "@types/react-redux": "^7.1.16",
     "@types/redux": "^3.6.0",
-    "@types/redux-thunk": "^2.1.0"
+    "@types/redux-thunk": "^2.1.0",
+    "react-test-renderer": "^17.0.2"
   }
 }
